versions/3.5.2/docs/ParametersUpdate.md
# ParametersUpdate


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**analytics** | **bool** |  | [optional] 
**branding_css** | **str** |  | [optional] 
**branding_logo** | **str** |  | [optional] 
**client_offer_file_search** | **bool** |  | [optional] 
**external_url** | **str, none_type** | http://host/ | [optional] 
**file_manager_recycle_bin** | **bool** | Recycle bins are usually either in Workspace/Share or Volume folder | [optional] 
**https_redirect** | **str, none_type** |  | [optional] 
**language** | **str** |  | [optional] 
**ltfs_default_restore_to_original_location** | **bool** |  | [optional] 
**ltfs_default_search_directories** | **bool** |  | [optional] 
**ltfs_library_address** | **str, none_type** |  | [optional] 
**mail_styling** | **{str: (str, none_type)}** |  | [optional] 
**media_auto_play** | **bool** |  | [optional] 
**media_auto_proxy** | **bool** |  | [optional] 
**media_auto_scan** | **bool** |  | [optional] 
**media_auto_transport** | **bool** |  | [optional] 
**media_auto_veritone_upload** | **bool** |  | [optional] 
**media_default_custom_field_type** | **str** |  | [optional] 
**media_default_delete_behaviour** | **str** |  | [optional] 
**media_force_show_deleted** | **bool, none_type** |  | [optional] 
**media_keep_selection_when_browsing** | **bool** |  | [optional] 
**media_recycle_bin** | **bool** | Recycle bin is usually in the .recycle-bin folder in the volume root | [optional] 
**ntp_offer_sync** | **bool** |  | [optional] 
**otp_policy** | **str** |  | [optional] 
**tasks_run_scheduled** | **bool** |  | [optional] 
**users_default_permissions** | **str** | Copy this value from an existing user | [optional] 
**workspaces_folder_template_path** | **str** |  | [optional] 
**workspaces_path** | **str** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


